current
--------------------------------------
- fixed MPI code on multiple directories
- add a log system to monitor epic activity
- new subspace files management

2008.6 beta
--------------------------------------
- added compiler parameters to space exploration
- fixed genetic approach
- improved mpi support for parallel execution
- misc bug fixes


2008.4 beta1
--------------------------------------
- support for multi-cluster register files
- new m5 memory simulator support
- rewritten multi-objective genetic algorithm
- support for execution in parallel environment (e.g. mpi)
- Support for saving/restore benchmark binary and PD_STATS
- Directory independent reorganization of the code
- Misc fixes in fuzzy approx.
- really working post_install.sh script
- more accurate cache access time and area estimate
- restored working manual steps in epic menu
- splitted algorithm source files


20060321-r1
--------------------------------------
Just maintained version of previous release:
- fixed a severe bug on append_simulations(...) introduced in 20060321, however GA based
  algorithm shouldn't have been affected.
- various fuzzy approximation fixes.


20060321
---------------------------------------
- Added Fuzzy approximation
- support for new Trimaran 3.7 
- post_install.sh script for easier workspace setup
- moved common routines to common.cpp
- cleaner class interfaces
- wait_key() after each error condition


20050512
---------------------------------------
- PD_kernel.c: rewritten L1I cache reference code to avoid unlimited
  growing of memory usage during simulation
- PD_dinero.c: bus transitions are now computed here. No more huge
  cache reference files and computational overhead. 
- GA: user can now choose how often to write out a pareto report
- added overall regalloc overhead report in detail estimation file
- separate SUBSPACES directory into trimaran-workspace/epic-explorer
- updated installing instructions